[gd_scene load_steps=6 format=3 uid="uid://bisb3337h5a7w"]

[ext_resource type="FontFile" uid="uid://bt75hb45ej8mq" path="res://Assets/_Assets/Font/LiberationSans-Bold.ttf" id="1_jfghu"]
[ext_resource type="Script" path="res://Assets/Scripts/UI/Options.gd" id="1_s462m"]
[ext_resource type="PackedScene" uid="uid://8kuosvusb47f" path="res://Assets/Subscenes/UIButton.tscn" id="2_77n40"]

[sub_resource type="LabelSettings" id="LabelSettings_ni2pv"]
font = ExtResource("1_jfghu")
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_c18md"]
font = ExtResource("1_jfghu")
font_size = 27

[node name="OptionsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s462m")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.247059, 0.247059, 0.247059, 1)

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -224.0
offset_right = 360.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/bold_font = ExtResource("1_jfghu")
theme_override_font_sizes/bold_font_size = 90
bbcode_enabled = true
text = "[center][b]Options[/b][/center]"

[node name="SoundSetting" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -45.0
offset_right = 300.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingText" type="Label" parent="SoundSetting"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 210.0
offset_bottom = 15.0
grow_vertical = 2
text = "Master Volume"
label_settings = SubResource("LabelSettings_ni2pv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="SoundSetting"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -9.0
offset_right = 225.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2

[node name="VolumeNumber" type="Label" parent="SoundSetting"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "100
"
label_settings = SubResource("LabelSettings_c18md")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" parent="." instance=ExtResource("2_77n40")]
layout_mode = 1
offset_left = -165.0
offset_top = 204.0
offset_right = 165.0
offset_bottom = 294.0
text = "Save & Quit
"
